Sql to mongo data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Project specific
+*.log
+docker-entrypoint-initdb.d/
+data
+.vscode
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
