--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+astroid==1.6.3
+backports.functools-lru-cache==1.5
 backports.shutil-get-terminal-size==1.0.0
 beautifulsoup4==4.6.0
 bs4==0.0.1
 chardet==3.0.4
+configparser==3.5.0
 decorator==4.2.1
 enum34==1.1.6
+futures==3.2.0
 ipython==5.5.0
 ipython-genutils==0.2.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 mongoengine==0.15.0
 mysql==0.0.1
 MySQL-python==1.2.5
@@ -16,10 +23,14 @@ pkg-resources==0.0.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
+pylint==1.8.4
 pymongo==3.6.1
+python-dotenv==0.8.2
 python-magic==0.4.15
 scandir==1.7
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.11.0
 traitlets==4.3.2
 wcwidth==0.1.7
+wrapt==1.10.11
