--- a/src/.env
+++ b/src/.env
@@ -4,3 +4,4 @@ MYSQL_USER = 'root'
 MYSQL_PASSWORD = 'example'
 HOST_MONGO = 'localhost'
 HOST_MYSQL = '127.0.0.1'
+FOLDER_LOCUTIONS = '/home/lm/proyectos/arasaac/pictos_mongo/src/locus'
