--- a/src/.env
+++ b/src/.env
@@ -5,3 +5,4 @@ MYSQL_PASSWORD = 'example'
 HOST_MONGO = 'localhost'
 HOST_MYSQL = '127.0.0.1'
 FOLDER_LOCUTIONS = '<ruta a carpeta de locuciones>'
+FOLDER_SVGS = '<ruta a carpeta de locuciones>'
